--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,10 @@ jobs:
       - name: Install dependencies
         run: |
           npm install --force
+
+      - name: Ensure ESLint Vue Plugin is Installed
+        run: |
           npm install eslint-plugin-vue@latest --save-dev
-          
 
       - name: Testing on OS (${{ matrix.os }}) with Node.js (version ${{ matrix.node-version }}) attempt ${{ matrix.attempt }}
         run: |
