--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Ensure ESLint Vue Plugin is Installed
         run: |
-          npm install eslint-plugin-vue@latest --save-dev
+          npm install eslint-plugin-vue@7 --save-dev
 
       - name: Testing on OS (${{ matrix.os }}) with Node.js (version ${{ matrix.node-version }}) attempt ${{ matrix.attempt }}
         run: |
